[gd_scene load_steps=19 format=3 uid="uid://dc3q8pndqjtq2"]

[ext_resource type="Script" path="res://content/entity/enemy/slime/slime.gd" id="1_ie5ju"]
[ext_resource type="PackedScene" uid="uid://nnbnpwag53rm" path="res://content/component/entity/shared/sprite_component.tscn" id="2_knlqr"]
[ext_resource type="Shader" path="res://content/entity/enemy/slime/slime.gdshader" id="3_28oga"]
[ext_resource type="Texture2D" uid="uid://bt5al28q454fr" path="res://assets/sprites/entity/enemy/slime/slime_ev1.png" id="3_hg4q8"]
[ext_resource type="PackedScene" uid="uid://bc806s2ci8gdn" path="res://content/component/entity/enemy/enemy_movement_component.tscn" id="4_bcroe"]
[ext_resource type="PackedScene" uid="uid://b0ru2457udg0y" path="res://content/component/entity/enemy/enemy_stats_component.tscn" id="5_c5ert"]
[ext_resource type="PackedScene" uid="uid://1bu2lpx38n6t" path="res://content/component/entity/shared/collision_component.tscn" id="6_vtp34"]
[ext_resource type="PackedScene" uid="uid://j0jkpmwfaet5" path="res://content/component/entity/enemy/hurt_box_component.tscn" id="7_17f5p"]
[ext_resource type="PackedScene" uid="uid://cks130t1pdf1a" path="res://content/component/entity/shared/entity_base_component.tscn" id="8_2kxf6"]
[ext_resource type="Texture2D" uid="uid://dbtv8fshw66nv" path="res://assets/sprites/entity/enemy/slime/slime_ev2.png" id="9_6vido"]
[ext_resource type="Texture2D" uid="uid://cpwbtws2ovewh" path="res://assets/sprites/entity/enemy/slime/slime_ev3.png" id="10_uxgkn"]
[ext_resource type="Script" path="res://content/component/entity/shared/health_component.gd" id="11_qhurw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_dqd7c"]
shader = ExtResource("3_28oga")
shader_parameter/tint_color = Color(1, 0, 0, 1)
shader_parameter/intensity = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_gtb32"]
radius = 5.09902

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfwr2"]
size = Vector2(14, 14)

[sub_resource type="Animation" id="Animation_8m1jm"]
resource_name = "take_damage"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteComponent:material:shader_parameter/intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.5, 0.0]
}

[sub_resource type="Animation" id="Animation_qyx7l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteComponent:material:shader_parameter/intensity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p563h"]
_data = {
"RESET": SubResource("Animation_qyx7l"),
"take_damage": SubResource("Animation_8m1jm")
}

[node name="Slime" type="CharacterBody2D" node_paths=PackedStringArray("evolution_stats")]
y_sort_enabled = true
collision_layer = 4
collision_mask = 7
motion_mode = 1
script = ExtResource("1_ie5ju")
evolution_stats = [NodePath("EnemyStatsComponent_Ev1"), NodePath("EnemyStatsComponent_Ev2"), NodePath("EnemyStatsComponent_Ev3")]
current_evolution = 1

[node name="SpriteComponent" parent="." node_paths=PackedStringArray("movement") instance=ExtResource("2_knlqr")]
z_index = 1
material = SubResource("ShaderMaterial_dqd7c")
texture = ExtResource("9_6vido")
movement = NodePath("../EnemyMovementComponent")

[node name="EnemyMovementComponent" parent="." node_paths=PackedStringArray("body", "stats") instance=ExtResource("4_bcroe")]
body = NodePath("..")
stats = NodePath("../EnemyStatsComponent_Ev1")

[node name="EnemyStatsComponent_Ev1" parent="." instance=ExtResource("5_c5ert")]
melee_cooldown = 1.0
texture = ExtResource("3_hg4q8")
max_movement_speed = 1500
movement_speed = 1500

[node name="CollisionComponent" parent="." instance=ExtResource("6_vtp34")]
shape = SubResource("CircleShape2D_gtb32")

[node name="Shadow" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(0, 6)

[node name="HurtBoxComponent" parent="." node_paths=PackedStringArray("stats") instance=ExtResource("7_17f5p")]
collision_layer = 0
collision_mask = 2
stats = NodePath("../EnemyStatsComponent_Ev1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxComponent"]
shape = SubResource("RectangleShape2D_tfwr2")

[node name="EntityBaseComponent" parent="." instance=ExtResource("8_2kxf6")]

[node name="EnemyStatsComponent_Ev2" parent="." instance=ExtResource("5_c5ert")]
melee_damage = 10
melee_cooldown = 1.0
texture = ExtResource("9_6vido")
max_movement_speed = 1500
movement_speed = 1500

[node name="EnemyStatsComponent_Ev3" parent="." instance=ExtResource("5_c5ert")]
melee_damage = 15
melee_cooldown = 1.0
texture = ExtResource("10_uxgkn")
max_movement_speed = 1500
movement_speed = 1500

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("stats")]
script = ExtResource("11_qhurw")
stats = NodePath("../EnemyStatsComponent_Ev1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p563h")
}
speed_scale = 3.0

[connection signal="damaged" from="HealthComponent" to="." method="_on_health_component_damaged"]
[connection signal="died" from="HealthComponent" to="." method="_on_health_component_died"]
